syntax = "proto3";
option optimize_for = LITE_RUNTIME;

package xchain.contract.sdk;

import "contract.proto"; 
// service provided by chain code, called by xchain
service NativeCode {
  rpc Call(NativeCallRequest) returns (NativeCallResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}

// xchain syscall service
service Syscall {
  // KV service
  rpc PutObject(PutRequest) returns (PutResponse);
  rpc GetObject(GetRequest) returns (GetResponse);
  rpc DeleteObject(DeleteRequest) returns (DeleteResponse);
  rpc NewIterator(IteratorRequest) returns (IteratorResponse);

  // Chain service
  rpc QueryTx(QueryTxRequest) returns (QueryTxResponse);
  rpc QueryBlock(QueryBlockRequest) returns (QueryBlockResponse);
  rpc Transfer(TransferRequest) returns (TransferResponse);
  rpc ContractCall(ContractCallRequest) returns (ContractCallResponse);

  // Heartbeat
  rpc Ping(PingRequest) returns (PingResponse);

  rpc GetCallArgs(GetCallArgsRequest) returns (CallArgs);
  rpc SetOutput(SetOutputRequest) returns (SetOutputResponse);
} 

